css/card.css
.listing-wrapper {
	width: 100%;
	margin-top: 20px;
}

.listing-inner-wrapper {
	margin: auto;
	padding: 0 0 0 25px;
	text-align: center;
}

.listing {
	display: inline-block;
	list-style: none;
	margin: 0;
	padding: 0;
	text-align: left;
	font-size: 0;
}

@media (min-width: 1201px) {
	.listing {
		width: 1125px;
	}
}
 
@media (min-width: 801px) and (max-width: 1200px) {
	.listing {
		width: 750px;
	}
}
 
@media (max-width: 800px) {
	.listing {
		width: 375px;
	}
}

.card {
	display: inline-block;
	width: 350px;
	list-style: none;
	margin: 0 25px 25px 0;
	border: 2px solid #bbb;
	vertical-align: top;
	text-align: left;
	font-size: 14px;
}










/*****  Recipe Card  *****/

.recipe.card {
	height: 350px;
}

.recipe-info-name-wrapper a,
.recipe-info-name-wrapper a:hover {
	color: black;
}

.recipe-card-img {
	height: 70%;
	background-size: cover;
}

.recipe-card-info {
	height: 30%;
	padding: 10px;
	border-top: 0px;
	background-color: white;
	overflow: hidden;
}

.recipe-info-top-wrapper:after {
	clear: both;
	display: block;
	content: "";
	height: 0;
}

.recipe-info-name-wrapper {
	width: 230px; /*248px*/
	float: left;
}

.recipe-name {
	font-size: 20px;
}

.recipe-diet {
	width: 96px;
	float: right;
	vertical-align: top;
	text-align: right;
	font-size: 0;
}

.diet-icon {
	display: inline-block;
	width: 22px;
	height: 22px;
	margin: 0 0 4px 4px;
	padding: 3px 0;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	text-align: center;
	font-size: 12px;
	font-weight: 600;
	color: white;
}

.diet-icon:hover {
	text-decoration: none;
	color: white;
}

.diet-tooltip {
	display: none;
	/*width: 135px;*/
	height: 20px;
	float: right;
	padding: 0 5px;
	text-align: center;
	font-size: 14px;
	color: white;
}

.diet-icon.vegetarian {
	background: #096b00;
}

.diet-icon.vegan {
	background: #2a0;
}

.diet-icon.dairy {
	background: #008a8a;
}

.diet-icon.kosher {
	background: #ab9210;
}

.diet-icon.gluten {
	background: #c46f0e;
}

.recipe-success {
	
}

.recipe-success .success-bar {
	width: 190px;
	height: 10px;
	border: 1px solid #ccc;
	background: #eee;
}

.success-bar .success {
	height: 100%;
	/*#0094e5*/
	/*#48bd13*/
	background-color: #097fb9;
}

.recipe-success > div {
	display: inline-block;
}

.recipe-success .success-text {
	float: right;
}

.recipe-success .success-rate {
	font-weight: bold;
}










/*****  User Card  *****/

.user.card {
	padding: 20px;
	font-size: 0;
}

.user-info {
	width: 100%;
	height: 100px;
}

.user-card-img {
	display: inline-block;
	width: 100px;
	height: 100px;
	margin-left: 10px;
}

.user-card-img,
.user-card-img * {
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
}

.user-card-img *,
.recipe-img *:not(.vcenter) {
	display: block;
	width: 100%;
	height: 100%;
	background-size: cover;
	background-position: 50% 50%;
}

.user-stats {
	display: inline-block;
	margin-top: 15px;
	margin-left: 30px;
	vertical-align: top;
	font-size: 14px;
}

.user-name a,
.user-name a:hover {
	font-size: 18px;
	color: black;
}

.recipe-img a,
.recipe-img a:hover {
	text-decoration: none;
	font-size: 16px;
	color: black;
}

.user-recipes {
	margin-top: 15px;
	font-size: 0px;
}

.user-recipes-heading {
	margin-bottom: 5px;
	font-size: 16px;
}

.user-recipe-list {
	display: block;
	padding: 0;
	list-style: none;
}

.recipe-img {
	display: inline-block;
	width: 50px;
	height: 50px;
	vertical-align: top;
	margin-right: 5px;
	border: 1px solid white;
	box-sizing: content-box;
}

.recipe-img:hover {
	border: 1px solid #888;
}

.recipe-img.more {
	background: #bbb;
	color: white;
	text-align: center;
}

.vcenter {
	display: inline-block;
	text-overflow: ellipsis;
	line-height: 100%;
	height: 100%;
}

.vcenter:before {
	content: ' ';
	display: inline-block;
	height: 110%;
	vertical-align: middle;
}

